Add option to build static library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,9 @@ cmake_minimum_required(VERSION 3.10...3.28)
 
 project(miniaudioex)
 
-set(BUILD_PLATFORM "unknown" CACHE STRING "Target platform for the build")
+set(MINIAUDIOEX_BUILD_PLATFORM "unknown" CACHE STRING "Target platform for the build")
 set(CMAKE_C_FLAGS_RELEASE "-O3")
+option(MINIAUDIOEX_BUILD_SHARED "Build shared library" ON)
 
 message("Configuring for platform: ${BUILD_PLATFORM}")
 
@@ -18,12 +19,16 @@ include_directories(
 
 add_definitions(-DNDEBUG)
 
-add_library(${PROJECT_NAME} SHARED ${SOURCES})
+if(MINIAUDIOEX_BUILD_SHARED)
+    add_library(${PROJECT_NAME} SHARED ${SOURCES})
+else()
+    add_library(${PROJECT_NAME} STATIC ${SOURCES})
+endif()
 
-if(BUILD_PLATFORM STREQUAL "linux_x86_64")
+if(MINIAUDIOEX_BUILD_PLATFORM STREQUAL "linux_x86_64")
     target_link_libraries(${PROJECT_NAME} -lpthread -lm -ldl)
-elseif(BUILD_PLATFORM STREQUAL "linux_arm")
+elseif(MINIAUDIOEX_BUILD_PLATFORM STREQUAL "linux_arm")
     target_link_libraries(${PROJECT_NAME} -lpthread -lm -ldl -latomic)
-elseif(BUILD_PLATFORM STREQUAL "linux_arm64")
+elseif(MINIAUDIOEX_BUILD_PLATFORM STREQUAL "linux_arm64")
     target_link_libraries(${PROJECT_NAME} -lpthread -lm -ldl -latomic)
 endif()
