--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(MINIAUDIOEX_BUILD_PLATFORM "unknown" CACHE STRING "Target platform for the b
 set(CMAKE_C_FLAGS_RELEASE "-O3")
 option(MINIAUDIOEX_BUILD_SHARED "Build shared library" ON)
 
-message("Configuring for platform: ${BUILD_PLATFORM}")
+message("Configuring for platform: ${MINIAUDIOEX_BUILD_PLATFORM}")
 
 file(GLOB SOURCES
     "${PROJECT_SOURCE_DIR}/src/*.c"
