--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(MINIAUDIOEX_BUILD_PLATFORM "unknown" CACHE STRING "Target platform for the b
 set(CMAKE_C_FLAGS_RELEASE "-O3")
 option(MINIAUDIOEX_BUILD_SHARED "Build shared library" ON)
 
-message("Configuring for platform: ${MINIAUDIOEX_BUILD_PLATFORM}")
+message(STATUS "miniaudioex: Configuring for platform: ${MINIAUDIOEX_BUILD_PLATFORM}")
 
 file(GLOB SOURCES
     "${PROJECT_SOURCE_DIR}/src/*.c"
@@ -21,8 +21,10 @@ add_definitions(-DNDEBUG)
 
 if(MINIAUDIOEX_BUILD_SHARED)
     add_library(${PROJECT_NAME} SHARED ${SOURCES})
+    message(STATUS "miniaudioex: Building shared library")
 else()
     add_library(${PROJECT_NAME} STATIC ${SOURCES})
+    message(STATUS "miniaudioex: Building static library")
 endif()
 
 if(MINIAUDIOEX_BUILD_PLATFORM STREQUAL "linux_x86_64")
