--- a/.github/build.yml
+++ b/.github/build.yml
@@ -1,6 +1,8 @@
 name: Build for MacOS, Linux, and Windows (dev branch)
 
 on: [push, pull_request]
+  branches:
+      - dev
 
 jobs:
   build-macos-arm64:
