--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,6 +152,74 @@ jobs:
         name: miniaudioex-build-linux-arm
         path: build/
 
+  build-android-arm:
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        arch: [x86_64]  # Linux architectures: x64
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up dependencies on Linux
+      run: |
+        echo "Setting up dependencies on Linux ${{ matrix.arch }}"
+        sudo apt-get update
+        sudo apt-get install -y cmake
+        wget https://dl.google.com/android/repository/android-ndk-r27d-linux.zip
+        unzip android-ndk-r27d-linux.zip -d /opt/
+        echo "export ANDROID_NDK=/opt/android-ndk-r27d" >> ~/.bashrc
+        source ~/.bashrc
+
+    - name: Build the project on Linux for Android ARM
+      run: |
+        echo "Building project on Linux ${{ matrix.arch }}"
+        mkdir build
+        cd build
+        cmake -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake -DANDROID_ABI=armeabi-v7a -DANDROID_PLATFORM=android-21 -DCMAKE_BUILD_TYPE=Release ..
+        cmake --build .
+
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: miniaudioex-build-android-arm
+        path: build/
+
+  build-android-arm64:
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        arch: [x86_64]  # Linux architectures: x64
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up dependencies on Linux
+      run: |
+        echo "Setting up dependencies on Linux ${{ matrix.arch }}"
+        sudo apt-get update
+        sudo apt-get install -y cmake
+        wget https://dl.google.com/android/repository/android-ndk-r27d-linux.zip
+        unzip android-ndk-r27d-linux.zip -d /opt/
+        echo "export ANDROID_NDK=/opt/android-ndk-r27d" >> ~/.bashrc
+        source ~/.bashrc
+
+    - name: Build the project on Linux for Android ARM64
+      run: |
+        echo "Building project on Linux ${{ matrix.arch }}"
+        mkdir build
+        cd build
+        cmake -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=android-21 -DCMAKE_BUILD_TYPE=Release ..
+        cmake --build .
+
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: miniaudioex-build-android-arm
+        path: build/
+
   build-windows:
     runs-on: windows-latest
     strategy:
