--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,14 +20,19 @@ jobs:
         cd build
         # We use the built-in iOS toolchain support in CMake 3.14+
         cmake -G Xcode \
-              -DCMAKE_SYSTEM_NAME=iOS \
+			  -DCMAKE_SYSTEM_NAME=iOS \
               -DCMAKE_OSX_ARCHITECTURES=arm64 \
               -DCMAKE_OSX_DEPLOYMENT_TARGET=13.0 \
-              -DCMAKE_BUILD_TYPE=Release \
+              -DCMAKE_XCODE_ATTRIBUTE_CODE_SIGNING_ALLOWED=NO \
+              -DCMAKE_XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY="" \
+              -DCMAKE_XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED=NO \
               -DMINIAUDIOEX_BUILD_PLATFORM=ios \
               ..
         # Using --config Release because Xcode is a multi-config generator
-        cmake --build . --config Release
+		cmake --build . --config Release -- \
+              CODE_SIGNING_ALLOWED=NO \
+              CODE_SIGNING_REQUIRED=NO \
+              CODE_SIGN_IDENTITY=""
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
