--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,24 +3,19 @@ name: Build for MacOS, Linux, and Windows
 on: [push, pull_request]
 
 jobs:
-  build-ios:
+	build-ios:
     runs-on: macos-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up dependencies on MacOS (iOS)
-      run: |
-        brew update && (brew list cmake || brew install cmake)
-
     - name: Build the project for iOS
       run: |
-        echo "Building project for iOS arm64"
         mkdir build
         cd build
-        # We use the built-in iOS toolchain support in CMake 3.14+
+        # 1. Configuration: Tell CMake to tell Xcode not to require signing
         cmake -G Xcode \
-			  -DCMAKE_SYSTEM_NAME=iOS \
+              -DCMAKE_SYSTEM_NAME=iOS \
               -DCMAKE_OSX_ARCHITECTURES=arm64 \
               -DCMAKE_OSX_DEPLOYMENT_TARGET=13.0 \
               -DCMAKE_XCODE_ATTRIBUTE_CODE_SIGNING_ALLOWED=NO \
@@ -28,16 +23,11 @@ jobs:
               -DCMAKE_XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED=NO \
               -DMINIAUDIOEX_BUILD_PLATFORM=ios \
               ..
-        # Using --config Release because Xcode is a multi-config generator
-		cmake --build . --config Release -- \
+        
+        # 2. Build: Pass the same flags to xcodebuild via CMake
+        cmake --build . --config Release -- \
               CODE_SIGNING_ALLOWED=NO \
               CODE_SIGNING_REQUIRED=NO \
               CODE_SIGN_IDENTITY=""
-
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: miniaudioex-build-ios
-        path: build/
 
   
